--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.4",
+    "postcss-pxtorem": "^5.1.1",
     "register-service-worker": "^1.7.1",
+    "vant": "^2.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
