--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@vue/cli-plugin-pwa": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
     "babel-eslint": "^10.1.0",
+    "chart.xkcd": "^1.1.13",
+    "chart.xkcd-vue": "^1.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.3",
