--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.4",
+    "echarts": "^4.7.0",
+    "js-cookie": "^2.2.1",
     "postcss-pxtorem": "^5.1.1",
     "register-service-worker": "^1.7.1",
+    "v-charts": "^1.19.0",
     "vant": "^2.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
@@ -25,8 +28,6 @@
     "@vue/cli-plugin-pwa": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
     "babel-eslint": "^10.1.0",
-    "chart.xkcd": "^1.1.13",
-    "chart.xkcd-vue": "^1.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.11.1",
