--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.4",
+    "d3": "^5.16.0",
     "echarts": "^4.7.0",
     "js-cookie": "^2.2.1",
+    "mockjs": "^1.1.0",
     "postcss-pxtorem": "^5.1.1",
     "register-service-worker": "^1.7.1",
     "v-charts": "^1.19.0",
